--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && scp -r ./build/* kehati10@final.students.nomoreparties.sbs:/home/kehati10/frontend"
+    "deploy": "npm run build && scp -r ./build/* kehati10@myNews.students.nomoreparties.sbs:/home/kehati10/frontend"
   },
   "eslintConfig": {
     "extends": [
